[package]
name = "lezeh"
version = "0.6.0"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"
description = """
Work specific productivity commands. See https://github.com/sendyhalim/lezeh for details.
"""
readme = "readme.md"
homepage = "https://github.com/sendyhalim/lezeh"
repository = "https://github.com/sendyhalim/lezeh"
keywords = ["cli", "developer-tools"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
env_logger = { version = "0.7" }
failure = { version = "0.1.7" }
fake = { version = "2.2", features = ["derive", "chrono"] }
futures = { version = "0.3" }
ghub = { version = "0.4" }
handlebars = { version = "4.1" }
log = { version = "0.4.8" }
phab-lib = { version = "0.2" }
reqwest = { version = "0.11", features = ["json"] }
rust-embed = { version = "5.9.0" }
serde = { version = "1.0.60", features = ["derive"] }
erased-serde = { version = "0.3" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
slog = { version = "2.5" }
slog-async = { version = "2.5.0" }
slog-envlogger = { version = "2.2.0" }
slog-term = { version = "2.6.0" }
tokio = { version = "1" , features = ["full"]}
url = { version = "2.2.1" }
urlshortener = { version = "3.0.0" }

[build-dependencies]
built = "0.4"


[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "lezeh"
path = "src/bin/main.rs"
