[package]
name = "lezeh-bill"
version = "0.0.1"
authors = ["Sendy Halim <sendyhalim93@gmail.com>"]
edition = "2018"
description = """
Work specific productivity commands. See https://github.com/sendyhalim/lezeh for details.
"""
readme = "readme.md"
homepage = "https://github.com/sendyhalim/lezeh"
repository = "https://github.com/sendyhalim/lezeh"
keywords = ["cli", "developer-tools"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
lezeh-common = { path = "../lezeh-common" }

[lib]
name = "lezeh_bill"
path = "src/lib/lib.rs"
